tests/ui/label/keyword-as-label-name.stderr
error: labels cannot use keyword names
  --> $DIR/keyword-as-label-name.rs:3:5
   |
LL |     'break: loop {
   |     ^^^^^^

error: aborting due to 1 previous error

